ganti logo, ganti theme

--- a/resources/css/quasar-variables.sass
+++ b/resources/css/quasar-variables.sass
@@ -1,6 +1,6 @@
-$primary   :rgb(12, 121, 172)
-$secondary : #5300ec
-$accent    : #9C27B0
+$primary   :rgb(0, 124, 108)
+$secondary :rgb(221, 99, 0)
+$accent    :rgb(189, 0, 179)
 
 $dark      : #1D1D1D
 
